--- a/composer.json
+++ b/composer.json
@@ -22,4 +22,6 @@
         "php": "^7.4 || ^8.0",
         "guzzlehttp/guzzle": "^7.0"
     }
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
