--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,12 @@
     ],
     "type": "library",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Yonoma",
+            "homepage": "https://github.com/YonomaHQ/yonoma-email-marketing-php"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "YonomaEmailMarketing\\": "src/YonomaEmailMarketing/"
@@ -23,5 +29,11 @@
         "guzzlehttp/guzzle": "^7.0"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "https://github.com/YonomaHQ/yonoma-email-marketing-php"
+        }
+    ]
 }
